tests/transpiler/x/java/cast_struct.error
exit status 1
Main.java:2: error: cannot find symbol
    static Todo todo = new Data1("hi");
           ^
  symbol:   class Todo
  location: class Main
1 error
